# fixed_width

./: .gitignore  Cargo.toml  README.md
fixed_width_derive/: Cargo.toml
fixed_width_derive/src/: any_value.rs  lib.rs
src/: any_value.rs  error.rs  lib.rs
src/model/: field_config.rs
tests/: test_bigdecimal.rs  test_list.rs  test_simple.rs
